deployments/handler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: handler
  labels:
    app: handler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: handler
  template:
    metadata:
      labels:
        app: handler
    spec:
      restartPolicy: Always
      containers:
        - image: ubuntu
          name: handler
          command: ["sleep", "300"]
          volumeMounts:
            - name: pgsql-persistent-storage
              mountPath: /mnt/data
              subPath: "postgresql-db"
      volumes:
        - name: pgsql-persistent-storage
          persistentVolumeClaim:
            claimName: pgsql-volumeclaim
