deployments/back.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  type: ClusterIP
  selector:
    app: talkiewalkie-back
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: talkiewalkie-back
  name: talkiewalkie-back
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: talkiewalkie-back
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: talkiewalkie-back
    spec:

      volumes:
        - name: google-cloud-key
          secret:
            secretName: backend-service-account

      containers:
      - image: gcr.io/talkiewalkie-305117/talkiewalkie-back:852b7cc3d04c98eb92e69a1ebbe02b49301075db
        imagePullPolicy: Always
        name: talkiewalkie-back
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: google-cloud-key
            mountPath: /var/secrets/google
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File

      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
