deployments/front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  type: ClusterIP
  selector:
    app: talkiewalkie-front
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: talkiewalkie-front
  name: talkiewalkie-front
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: talkiewalkie-front
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: talkiewalkie-front
    spec:
      containers:
      - image: gcr.io/talkiewalkie-305117/talkiewalkie-front:1
        imagePullPolicy: IfNotPresent
        name: talkiewalkie-front
        resources: {}
        ports:
          - containerPort: 80
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
