deployments/reverse-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy-service
spec:
  type: ClusterIP
  selector:
    app: reverse-proxy
  ports:
    - protocol: TCP
      targetPort: http
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: reverse-proxy
  name: reverse-proxy
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: reverse-proxy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: reverse-proxy
    spec:
      containers:
        - image:  gcr.io/talkiewalkie-305117/reverse-proxy:0
          imagePullPolicy: Always
          name: reverse-proxy
          resources: {}
          ports:
            - containerPort: 80
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
